- wxListCtrl and wxTreeCtrl now resize their standard font if the user
  changes the system font.
- wxDisplay doesn't require multimon.h now and is enabled by default (Olly Betts).
- Fixed wxChoice/wxComboBox slow appending and infinite recursion
  if its size is set within a paint handler (for example when embedded in a
  wxHtmlWindow). [Now reverted due to problems in W2K and below.]

wxGTK:

- Fixed handling of font encoding in non-Unicode build
- wxEVT_MENU_CLOSE and wxEVT_MENU_OPENED for popup menus are now generated.
- Implemented wxCURSOR_BLANK support.
- wxSlider generates all scroll events now and not only wxEVT_SCROLL_THUMBTRACK.
- Fixed a host of bugs in wxMediaCtrl as well as added a GStreamer 0.10
  implementation.
- Improved configure checks for GStreamer. You may also now specify
  --enable-gstreamer8 to force configure to check for GStreamer 0.8.
- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed focusing with mnemonic accelerator keys on wxStaticText which
  is now able to focus on wxComboBox and possibly other controls
  previously unable to be focused before.
- Enabled mnemonics and the corresponding accelerator keys for
  wxStaticBox and wxRadioBox.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.
- Polygon and line drawing speeded up if there is no scaling.
- Fixed problems with CJK input method.
- Implemented ScrollLines/Pages() for all windows (Paul Cornett).
- Support underlined fonts in wxTextCtrl.

wxMac:

- Fixed problem with clipboard support for custom data flavors.
- Fixed focus handling for generic controls in carbon-cfm.
- Fixed a printing crash bug, for example using File->Print and changing
  Popup from 'Copies & Pages' to e.g. 'Layout'.
- Improved support for help and application menu items.
- Added default implementations for wxTextCtrl::Replace and wxTextCtrl::Remove.